fix: handle PR comments
