# spec/support/fixtures/openapi.json
@@ -213,7 +213,28 @@
           "Core"
         ],
         "parameters": [
-
+          {
+            "in": "query",
+            "name": "disk_template_options[][key]",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            },
+            "description": "All `disk_template_options[]` params should have the same amount of elements."
+          },
+          {
+            "in": "query",
+            "name": "disk_template_options[][value]",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            },
+            "description": "All `disk_template_options[]` params should have the same amount of elements."
+          }
         ],
         "responses": {
           "200": {
@@ -584,7 +605,7 @@
             "schema": {
               "type": "string"
             },
-            "description": "\n\nAll 'object[]' params are mutually exclusive, only one can be provided."
+            "description": "All 'object[]' params are mutually exclusive, only one can be provided."
           },
           {
             "in": "query",
@@ -593,7 +614,7 @@
               "type": "string",
               "description": "The permalink of the object to look up"
             },
-            "description": "The permalink of the object to look up. \n\nAll 'object[]' params are mutually exclusive, only one can be provided."
+            "description": "The permalink of the object to look up. \n\n All 'object[]' params are mutually exclusive, only one can be provided."
           },
           {
             "name": "scalar",
